--- a/scratch_library/index.html
+++ b/scratch_library/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gratter</title>
+  <title>Advertisement</title>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
   <style>
     html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,em,img,q,samp,small,strong,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,caption,tbody,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{
@@ -26,19 +26,14 @@
       background: rgba(0,0,0,.2);
       line-height: 1;
     }
-    #adContainer {
-      display: none;
-      position: relative; 
-      min-width: 670px;
-      max-width: 670px;
-      width: 980px; 
-      min-height: 980px;
-      max-height: 980px;
-      height: 980px; 
-      margin: 0 auto; 
-      padding: 0; 
-      overflow: hidden;
-    }
+
+  @font-face {
+  font-family: 'LandRoverOT4-Bold';
+  src: url("LandRoverOT4-Bold.eot");
+  src: url("font/LandRoverOT4-Bold?#iefix") format("embedded-opentype"), url("font/LandRoverOT4-Bold.woff") format("woff"), url("font/LandRoverOT4-Bold.ttf") format("truetype"), url("font/LandRoverOT4-Bold.svg#LandRoverOT4-Bold") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
     #container {
       position: absolute; 
       top: 0; 
@@ -48,37 +43,33 @@
       margin: 0; 
       padding: 0;
     }
-    #scratchArea {
-    	//position: absolute;
-    	left: 0;
-    	top: 0;
-    	opacity: 0;
+    #scratchArea-portrait, #scratchArea-landscape {
+      //position: absolute;
+      left: 0;
+      top: 0;
+      opacity: 0;
     }
-  	#container {
-  		background-image: url("assets/portrait-clean.jpg");
-  	}
+
+    #lrplayer {
+      display: none;
+    }
+
+    #adContainer {
+      display: none;
+      position: relative; 
+      margin: 0 auto; 
+      padding: 0; 
+      overflow: hidden;
+    }
 
     .lrtext {
       font-family: "LandRoverOT4-Bold";
       position: absolute;
-      top: 56px;
-      left: 56px;
-      font-size: 18pt;
-      width: 363px;
-    }
-
-    #textline-1 {
-      font-size: 14pt;
+      z-index: 999999;
     }
 
     #textline-1, #textline-2 {
       text-transform: uppercase;
-    }
-
-    #textline-3, #textline-4, #textline-5 {
-      font-size: 12pt;
-      display: none;
-      margin-top: 10px;
     }
 
     #textline-4 {
@@ -100,29 +91,104 @@
       cursor: pointer;
     }
 
-    #lrplayer {
-      display: none;
-    }
-
     #lrvideobg {
-      position: absolute;
-      top: 220px;
-      left: 56px;
-      width: 560px;
-      height: 398px;
       background: white;
       opacity: 0.75;
+      width: 100%;
+      height: 100%;
     }
 
      #lrvideo {
       position: absolute;
-      top: 262px;
-      left: 56px;
     }
 
-  @font-face {
-  font-family: "LandRoverOT4-Bold";
-  src: url("font/LandRoverOT4-Bold.ttf") format("truetype"); }
+    #lrplayer {
+      margin: auto;
+      top: 0px;
+      width: 560px;
+      height: 398px;
+      top: 220px;
+      left:208px;
+      position: absolute;
+    }
+
+
+
+@media (orientation: portrait) {
+
+    #adContainer {
+      width: 670px;
+      height: 980px; 
+    }
+
+    #scratchArea-landscape {
+      display: none;
+    }
+
+  	#container {
+  		background-image: url("assets/portrait-clean.jpg");
+  	}
+
+    .lrtext {
+      top: 56px;
+      left: 56px;
+      font-size: 18pt;
+      width: 363px;
+    }
+
+    #textline-1 {
+      font-size: 14pt;
+    }
+
+    #textline-3, #textline-4, #textline-5 {
+      font-size: 12pt;
+      display: none;
+      margin-top: 10px;
+    }
+
+     #lrvideo {
+      top: 42.5px;
+    }
+
+}
+
+@media (orientation: landscape) {
+
+    #adContainer {
+      width: 980px;
+      height: 670px; 
+    }
+
+    #scratchArea-portrait {
+      display: none;
+    }
+
+    #container {
+      background-image: url("assets/landscape-clean.jpg");
+    }
+
+    .lrtext {
+      top: 56px;
+      left: 56px;
+      font-size: 18pt;
+      width: 363px;
+    }
+
+    #textline-1 {
+      font-size: 14pt;
+    }
+
+    #textline-3, #textline-4, #textline-5 {
+      font-size: 12pt;
+      display: none;
+      margin-top: 10px;
+    }
+
+     #lrvideo {
+      top: 42.5px;
+    }
+
+}
 
 
 
@@ -130,25 +196,27 @@
 </head>
 <body>
   <div id='adContainer'>
+    <div class="lrtext"><div id="textline-2">Clean off the car copy FPO Lorem ipsum dolor sit amet consectetur adipisicing</div></div>
     <div id='container'>
-      <div class="lrtext"><div id="textline-2">Clean off the car copy FPO Lorem ipsum dolor sit amet consectetur adipisicing</div></div>
+      <div id="scratchArea-portrait" data-backGroundImage="assets/portrait-clean.jpg" data-foreGroundImage="assets/portrait-dirty.jpg">
+      </div>
+       <div id="scratchArea-landscape" data-backGroundImage="assets/landscape-clean.jpg" data-foreGroundImage="assets/landscape-dirty.jpg">
+      </div>
+    </div>
+  </div>
       <div id="lrplayer">
       <div id="lrvideobg">
       </div>
       <video id="lrvideo" width="560" height="314" controls autoplay>
               <source src="video/WASHDAY_070813.mp4" type="video/mp4">
+              <source src="video/WASHDAY_070813.ogv" type="video/ogg">
+              <source src="video/WASHDAY_070813.webm" type="video/webm">
                 Your browser does not support the video tag.
       </video>
     </div>
-      <div id="scratchArea" data-backGroundImage="assets/portrait-clean.jpg" data-foreGroundImage="assets/portrait-dirty.jpg">
-      </div>
-    </div>
-  </div>
-
 
 <script src="assets/jquery-1.9.1.min.js"></script>
 <script src="assets/jquery.ScratchCard.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 <script>
 	var i = 0;
   var vidplays = 0;
@@ -158,38 +226,50 @@
 	    $("<img/>")[0].src = this;
 	    i++;
 	    if(i == 2) {
-	    	$("#scratchArea").css("opacity", "1");
+	    	$("#scratchArea-landscape, #scratchArea-portrait").css("opacity", "1");
 	    }
 	  });
 	}
+
+  function loadScratchCard() {
+    $("#scratchArea-landscape, #scratchArea-portrait").ScratchCard({
+      revealRadius: 40,
+      revealOnComplete: false,
+      updateOnMouseMove: false,
+      updateOnFingerMove: false,
+      onScratchComplete: function(percentScratched) {
+        console.log(percentScratched);
+      },
+    });
+  }
+
 	$(document).ready(function() {
-  
+
     var swipecount = 0;
     $('#adContainer').fadeIn('slow');
-		$(["assets/portrait-dirty.jpg", "assets/portrait-clean.jpg"]).preload();
-		$("#scratchArea").ScratchCard({
-			revealRadius: 40,
-			revealOnComplete: false,
-			updateOnMouseMove: false,
-			updateOnFingerMove: false,
-			onScratchComplete: function(percentScratched) {
-			},
-		});
+		$(["assets/portrait-dirty.jpg", "assets/portrait-clean.jpg", "assets/landscape-dirty.jpg", "assets/landscape-clean.jpg"]).preload();
+		loadScratchCard();
 
-    $.event.special.swipe.horizontalDistanceThreshold = 10;
-    $.event.special.swipe.durationThreshold = 200;
 
-    jQuery( window ).on( "swipe", function( event ) { 
-      if (swipecount==2) loadVid();
-      if (swipecount==0) jQuery('.lrtext').fadeOut('fast', function(){jQuery(this).html("<div id='textline-1'>Range Rover Evoque</div><div id='textline-2'>Plus Qu'une Belle BÊte</div>").fadeIn('fast')});
-      swipecount++;
-      console.log(swipecount);
-     } )
+  box1 = document.getElementById('container');
+   box1.addEventListener('touchend', function(e){
+  if (swipecount==0) loadVid();
+  swipecount++;
+  e.preventDefault()
+ }, false);
+
+   box1.addEventListener('touchstart', function(e){
+  if (swipecount==0) jQuery('.lrtext').fadeOut('fast', function(){jQuery(this).html("<div id='textline-1'>Range Rover Evoque</div><div id='textline-2'>Plus Qu'une Belle BÊte</div>").fadeIn('fast')});
+  e.preventDefault()
+ }, false);
 
 	});
 
+
+
   function loadVid() {
     vidplays++;
+    jQuery('.scratchCanvas').animate({'opacity': 0});
     jQuery('#lrplayer').fadeIn('slow', function(){
       video.play();
     });
@@ -202,10 +282,10 @@
     if (vidplays <= 1) { 
       jQuery('.lrtext').append("<div id='textline-3'>Comme tous les véhicules Land Rover, le Range Rover Evoque 2013 optimise performances et capacités sous toutes les conditions, sur route come hors route. D'une allure compacte et audacieuse, c'est le Land Rover le plus efficace jamais construit.</div><div id='textline-4'>CTA<br>xx% Extra Copy</div><div id='textline-5' onclick='loadVid()'></div>");
       jQuery('#textline-3, #textline-4, #textline-5').fadeIn();
-       jQuery('#scratchCanvas').fadeOut('slow');
      }
     });
     };
+
 </script>
 </body>
 </html>
