--- a/main/index.html
+++ b/main/index.html
@@ -20,10 +20,10 @@
         </div>
     </div>
     <div id="lrplayer">
-        <div id="lrvideoclose" onclick="lrclosevid();"></div>
+        <div id="lrvideoclose"></div>
         <div id="lrvideobg">
         </div>
-        <video id="lrvideo" controls autoplay>
+        <video id="lrvideo" controls autoplay preload="none">
             <source src="video/WASHDAY_070813.mp4" type="video/mp4">
                 <source src="video/WASHDAY_070813.ogv" type="video/ogg">
                     <source src="video/WASHDAY_070813.webm" type="video/webm">
