--- a/main/index.html
+++ b/main/index.html
@@ -33,7 +33,7 @@
 
     <script src="js/jquery-1.9.1.min.js"></script>
     <script src="js/jquery.ScratchCard.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
+    <script src="js/jquery.mobile-1.4.3.min.js"></script>
     <script src="js/lr.js"></script>
 
 </body>
